# minitalk

./: CMakeLists.txt  Makefile  a.out  client.c  client_bonus.c  main.c  server.c  server_bonus.c
includes/: client.h  server.h
